@@ -1014,6 +1014,7 @@ class GetClassMetaTestCase(unittest.TestCase):
         empty = {
             'readonly_attrs': None,
             'static_attrs': None,
+            'proxy_attrs': None,
             'dynamic': None,
             'alias': None,
             'amf3': None,
@@ -1036,6 +1037,7 @@ class GetClassMetaTestCase(unittest.TestCase):
         meta = {
             'readonly_attrs': None,
             'static_attrs': None,
+            'proxy_attrs': None,
             'dynamic': None,
             'alias': 'foo.bar.Spam',
             'amf3': None,
@@ -1058,6 +1060,7 @@ class GetClassMetaTestCase(unittest.TestCase):
         meta = {
             'readonly_attrs': None,
             'static_attrs': ['foo', 'bar'],
+            'proxy_attrs': None,
             'dynamic': None,
             'alias': None,
             'amf3': None,
@@ -1080,6 +1083,7 @@ class GetClassMetaTestCase(unittest.TestCase):
         meta = {
             'readonly_attrs': None,
             'exclude_attrs': ['foo', 'bar'],
+            'proxy_attrs': None,
             'dynamic': None,
             'alias': None,
             'amf3': None,
@@ -1102,6 +1106,7 @@ class GetClassMetaTestCase(unittest.TestCase):
         meta = {
             'exclude_attrs': None,
             'readonly_attrs': ['foo', 'bar'],
+            'proxy_attrs': None,
             'dynamic': None,
             'alias': None,
             'amf3': None,
@@ -1124,6 +1129,7 @@ class GetClassMetaTestCase(unittest.TestCase):
         meta = {
             'exclude_attrs': None,
             'readonly_attrs': None,
+            'proxy_attrs': None,
             'dynamic': None,
             'alias': None,
             'amf3': True,
@@ -1146,6 +1152,7 @@ class GetClassMetaTestCase(unittest.TestCase):
         meta = {
             'exclude_attrs': None,
             'readonly_attrs': None,
+            'proxy_attrs': None,
             'dynamic': False,
             'alias': None,
             'amf3': None,
@@ -1168,6 +1175,7 @@ class GetClassMetaTestCase(unittest.TestCase):
         meta = {
             'exclude_attrs': None,
             'readonly_attrs': None,
+            'proxy_attrs': None,
             'dynamic': None,
             'alias': None,
             'amf3': None,
@@ -1198,6 +1206,7 @@ class GetClassMetaTestCase(unittest.TestCase):
         ret = {
             'readonly_attrs': ['bar'],
             'static_attrs': ['baz'],
+            'proxy_attrs': None,
             'dynamic': False,
             'alias': 'spam.eggs',
             'amf3': True,
@@ -1207,6 +1216,29 @@ class GetClassMetaTestCase(unittest.TestCase):
 
         self.assertEquals(util.get_class_meta(A), ret)
         self.assertEquals(util.get_class_meta(B), ret)
+
+    def test_proxy(self):
+        class A:
+            class __amf__:
+                proxy = ('foo', 'bar')
+
+        class B(object):
+            class __amf__:
+                proxy = ('foo', 'bar')
+
+        meta = {
+            'exclude_attrs': None,
+            'readonly_attrs': None,
+            'proxy_attrs': ['foo', 'bar'],
+            'dynamic': None,
+            'alias': None,
+            'amf3': None,
+            'static_attrs': None,
+            'external': None
+        }
+
+        self.assertEquals(util.get_class_meta(A), meta)
+        self.assertEquals(util.get_class_meta(B), meta)
 
 
 def suite():
