@@ -8,6 +8,7 @@ versions of PyAMF.
 
 0.6 (unreleased)
 ----------------
+- ``__amf__.proxy`` actually works (Ticket:712)
 - Django adapter now uses ``get_all_field_names`` to find model properties
   (Ticket:625)
 - Added ``ClassAlias.bases`` and deep class tree support for typed classes
